--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
 			<scope>test</scope>
 		</dependency>
 		
+		<!-- The following dependencies are for Freemarker template engine -->
 		<dependency>
     		<groupId>org.springframework</groupId>
     		<artifactId>spring-context-support</artifactId>
@@ -47,12 +48,25 @@
     		<artifactId>freemarker</artifactId>
     	</dependency>
     	
+    	<!-- The following dependencies are for serving static files -->
     	<dependency>
     		<groupId>org.springframework.boot</groupId>
     		<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 
-	
+		<!-- The following dependencies are for database -->
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
