--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
-server.port=8081
+server.port=7001
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/eTWIG
-spring.datasource.username= postgres
-spring.datasource.password= postgres
+server.error.whitelabel.enabled=false
+server.error.include-exception=true
+server.error.include-stacktrace=always
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/eTWIG
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
-# Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=none
