--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,12 @@
     		<artifactId>commons-lang3</artifactId>
 		</dependency>
 
+		<dependency>
+    		<groupId>org.projectlombok</groupId>
+    		<artifactId>lombok</artifactId>
+    		<scope>provided</scope>
+		</dependency>
+
 
 	</dependencies>
 
