--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ before_script:
   - source /etc/profile
 
 maven-build:                     
-    image: maven:3-jdk-17          
+    image: maven:3-sapmachine-17          
     stage: build                   
     script: "mvn package -B"
     artifacts:              
