--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,8 @@ compile:
     tags:
         - localhost
 
-test:                     
+test:     
+    image: maven:3-sapmachine-17                          
     stage: tests                   
     script: "mvn test -B"
     allow_failure: true
