--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,25 @@
+# Server Settings
+# Port for embedded Tomcat server.
 server.port=7001
 
+# Java code debug and error handling
+# Set "true" in production environment!
 server.error.whitelabel.enabled=false
+
+# Comment or disable following in production environment!
 server.error.include-exception=true
 server.error.include-stacktrace=always
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/eTWIG
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+# Database connection
+spring.datasource.url=jdbc:postgresql://IP:PORT/DB_NAME
+spring.datasource.username=DB_USERNAME
+spring.datasource.password=DB_PASSWORD
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
-
 spring.jpa.hibernate.ddl-auto=none
 
+# SQL code debug
+# Comment or disable following in production environment!
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
