--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,6 @@ spring.jpa.hibernate.ddl-auto=none
 # Comment or disable following in production environment!
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# Freemarker suffix
+spring.freemarker.suffix=.ftl
