--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,6 @@
 			<artifactId>thymeleaf-extras-springsecurity6</artifactId>
 		</dependency>
 		
-		
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
@@ -67,32 +66,26 @@
     		<artifactId>freemarker</artifactId>
     	</dependency>
     	
-    	<!-- Thymeleaf template engine (only used in serving static files) -->
+    	<!-- Thymeleaf template engine-->
     	<dependency>
     		<groupId>org.springframework.boot</groupId>
     		<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 
-		<!-- Relational databases connector-->
+		<!-- Spring data JPA-->
 		<dependency>
     		<groupId>org.springframework.boot</groupId>
     		<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
+		<!-- PostgreSQL driver-->
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		
-		<!--
-		<dependency>
-    		<groupId>org.json</groupId>
-    		<artifactId>json</artifactId>
-    		<version>20231013</version>
-		</dependency>
-		-->
-		
+		<!-- Utils -->
 		<dependency>
     		<groupId>org.apache.commons</groupId>
     		<artifactId>commons-lang3</artifactId>
@@ -103,8 +96,15 @@
     		<artifactId>lombok</artifactId>
     		<scope>provided</scope>
 		</dependency>
-
-
+		
+		<!--
+		<dependency>
+    		<groupId>org.openpnp</groupId>
+   			<artifactId>opencv</artifactId>
+    		<version>3.4.2-0</version>
+		</dependency>
+		-->
+		
 	</dependencies>
 
 	<build>
