--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,14 @@
 		</dependency>
 		-->
 		
+		<!--
+		<dependency>
+    		<groupId>commons-io</groupId>
+    		<artifactId>commons-io</artifactId>
+    		<version>2.6</version>
+		</dependency>
+		-->
+		
 	</dependencies>
 
 	<build>
