--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,12 @@
 	</parent>
 	<groupId>net.grinecraft</groupId>
 	<artifactId>etwig</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0.build.20240104</version>
 	<packaging>jar</packaging>
 	<name>etwig</name>
-	<description>wTWIG</description>
+	<description>
+		eTWIG - The event and banner management software for residential halls and student unions.
+	</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -66,19 +68,19 @@
     		<artifactId>freemarker</artifactId>
     	</dependency>
     	
-    	<!-- Thymeleaf template engine-->
+    	<!-- Thymeleaf template engine -->
     	<dependency>
     		<groupId>org.springframework.boot</groupId>
     		<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 
-		<!-- Spring data JPA-->
+		<!-- Spring data JPA -->
 		<dependency>
     		<groupId>org.springframework.boot</groupId>
     		<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
-		<!-- PostgreSQL driver-->
+		<!-- PostgreSQL driver -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
@@ -97,20 +99,11 @@
     		<scope>provided</scope>
 		</dependency>
 		
-		<!--
-		<dependency>
-    		<groupId>org.openpnp</groupId>
-   			<artifactId>opencv</artifactId>
-    		<version>3.4.2-0</version>
-		</dependency>
-		-->
-		
 		<dependency>
     		<groupId>commons-io</groupId>
     		<artifactId>commons-io</artifactId>
     		<version>2.6</version>
 		</dependency>
-		
 		
 	</dependencies>
 
