--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,40 @@
-# Server Settings
-server.port=7001
+# Server
+server.address=0.0.0.0
+server.port=7443
+
+# SSL
+security.require-ssl=true
+server.ssl.key-store: 
+server.ssl.key-store-password:
+server.ssl.keyStoreType: 
+server.ssl.keyAlias: 
+
+# Error handling
 server.error.whitelabel.enabled=false
 server.error.include-exception=true
 server.error.include-stacktrace=always
 
-# Database connection
-spring.datasource.url=jdbc:postgresql://IP:PORT/DB_NAME
-spring.datasource.username=DB_USERNAME
-spring.datasource.password=DB_PASSWORD
+# Cookie Settings
+server.servlet.session.cookie.same-site=None
 
-# Spring JPA settings
+# Database
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
+
+# Spring JPA
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# Freemarker settings
+# Freemarker
 spring.freemarker.suffix=.ftl
 spring.freemarker.settings.template_exception_handler=rethrow
 
-# eTWIG options.
+# eTWIG.
 etwig.app.name=eTWIG
 etwig.app.customer=Hall
-etwig.media.root-location=/home/
+etwig.media.root-location=
+etwig.security.cookie-key=
