Updated property file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,6 +35,6 @@ spring.freemarker.settings.template_exception_handler=rethrow
 
 # eTWIG.
 etwig.app.name=eTWIG
-etwig.app.customer=Hall
+etwig.app.owner=
 etwig.media.root-location=
 etwig.security.cookie-key=
