--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+
+spring.config.import=file:/home/anakin/git/etwig/output/application.properties
+
 # Server
 server.address=0.0.0.0
 server.port=7443
