--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,15 @@
 			<scope>test</scope>
 		</dependency>
 		
+		<!--
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-devtools</artifactId>
+        	<scope>runtime</scope>
+        	<optional>true</optional>
+    	</dependency>
+		-->
+		
 		<!-- Spring Security-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
