--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,42 +2,42 @@
 spring.config.import=file:/home/anakin/git/etwig/output/application.properties
 
 # Server
-server.address=0.0.0.0
-server.port=7443
+#server.address=0.0.0.0
+#server.port=7443
 
 # SSL
-security.require-ssl=true
-server.ssl.key-store: 
-server.ssl.key-store-password:
-server.ssl.keyStoreType: 
-server.ssl.keyAlias: 
+#security.require-ssl=true
+#server.ssl.key-store: 
+#server.ssl.key-store-password:
+#server.ssl.keyStoreType: 
+#server.ssl.keyAlias: 
 
 # Error handling
-server.error.whitelabel.enabled=false
-server.error.include-exception=true
-server.error.include-stacktrace=always
+#server.error.whitelabel.enabled=false
+#server.error.include-exception=true
+#server.error.include-stacktrace=always
 
 # Cookie Settings
-server.servlet.session.cookie.same-site=None
+#server.servlet.session.cookie.same-site=None
 
 # Database
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
+#spring.datasource.url=
+#spring.datasource.username=
+#spring.datasource.password=
 
 # Spring JPA
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 
 # Freemarker
-spring.freemarker.suffix=.ftl
-spring.freemarker.settings.template_exception_handler=rethrow
+#spring.freemarker.suffix=.ftl
+#spring.freemarker.settings.template_exception_handler=rethrow
 
 # eTWIG.
-etwig.app.name=eTWIG
-etwig.app.owner=
-etwig.media.root-location=
-etwig.security.cookie-key=
+#etwig.app.name=eTWIG
+#etwig.app.owner=
+#etwig.media.root-location=
+#etwig.security.cookie-key=
