banner request db design

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.config.import=file:/home/anakin/git/etwig/output/application.properties
+spring.config.import=file:/opt/etwig/application.properties
 
 # Server
 #server.address=0.0.0.0
@@ -41,3 +41,5 @@ spring.config.import=file:/home/anakin/git/etwig/output/application.properties
 #etwig.app.owner=
 #etwig.media.root-location=
 #etwig.security.cookie-key=
+
+#security.ignored=/myAssets/**
