--- a/src/main/typescript/package.json
+++ b/src/main/typescript/package.json
@@ -3,6 +3,8 @@
     "rrule": "^2.8.1"
   },
   "devDependencies": {
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   },
