--- a/pom.xml
+++ b/pom.xml
@@ -40,14 +40,10 @@
 			<scope>test</scope>
 		</dependency>
 		
-		<!--
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-        	<artifactId>spring-boot-devtools</artifactId>
-        	<scope>runtime</scope>
-        	<optional>true</optional>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-mail</artifactId>
     	</dependency>
-		-->
 		
 		<!-- Spring Security-->
 		<dependency>
