--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,6 +36,15 @@ spring.config.import=file:/opt/etwig/application.properties
 #spring.freemarker.suffix=.ftl
 #spring.freemarker.settings.template_exception_handler=rethrow
 
+# Email
+#spring.mail.host=
+#spring.mail.port=
+#spring.mail.username=
+#spring.mail.password=
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#etwig.mail.display-name=
+
 # eTWIG.
 #etwig.app.name=eTWIG
 #etwig.app.owner=
