--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,11 @@
 	</parent>
 	<groupId>net.grinecraft</groupId>
 	<artifactId>etwig</artifactId>
-	<version>1.0.0</version>
+	<version>1.2</version>
 	<packaging>jar</packaging>
 	<name>etwig</name>
 	<description>
-		eTWIG - The event management software for Griffin Hall.
+		eTWIG - The event management platform for Griffin Hall.
 	</description>
 	<properties>
 		<java.version>17</java.version>
@@ -92,14 +92,13 @@
 			<scope>runtime</scope>
 		</dependency>
 		
-		<!-- Apache POI for Excel files -->
+		<!-- Document editing -->
 	    <dependency>
 	        <groupId>org.apache.poi</groupId>
 	        <artifactId>poi-ooxml</artifactId>
    		 	<version>5.2.5</version>
 	    </dependency>
 	    
-       <!-- Simple ODF for ODS Files -->
         <dependency>
             <groupId>org.odftoolkit</groupId>
             <artifactId>simple-odf</artifactId>
