--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<!--<scope>provided</scope>--><!-- Comment me in Intellij. -->
+			<!--<scope>provided</scope>--><!-- Comment me in IntelliJ. -->
 		</dependency>
 		
 		<dependency>
