--- a/pom.xml
+++ b/pom.xml
@@ -91,14 +91,20 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		
+
 		<!-- Document editing -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>5.2.2</version>
+		</dependency>
+
 	    <dependency>
 	        <groupId>org.apache.poi</groupId>
 	        <artifactId>poi-ooxml</artifactId>
-   		 	<version>5.2.5</version>
+   		 	<version>5.2.2</version>
 	    </dependency>
-	    
+
         <dependency>
             <groupId>org.odftoolkit</groupId>
             <artifactId>simple-odf</artifactId>
@@ -120,7 +126,7 @@
 		<dependency>
     		<groupId>commons-io</groupId>
     		<artifactId>commons-io</artifactId>
-    		<version>2.6</version>
+    		<version>2.14.0</version>
 		</dependency>
 		
 		<dependency>
