--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 		<version>3.2.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>net.grinecraft</groupId>
-	<artifactId>etwig</artifactId>
+	<groupId>net.etwig</groupId>
+	<artifactId>webapp</artifactId>
 	<version>2.0</version>
 	<packaging>jar</packaging>
 	<name>etwig</name>
